# upload_pdf_test

./: README.md  main.py  pyproject.toml
static/css/: styles.css
static/js/: scripts.js
templates/: chat.html  home.html  upload.html
