[tool.poetry]
name = "repl_nix_uploadpdftest"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
boto3 = "^1.26.110"
Flask = "^2.2.3"
Werkzeug = "^2.2.3"
PyPDF2 = "^3.0.1"
openai = "^0.27.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
